crates/aven-check/tests/fixtures/check/valid/comptime-partial-binding.av
User = { name: Text, email: Text }
partial = (object) => { keysOf(object) -> k; [k]: ?object[k] }
Partial = partial(User)
x : Partial = { name: "Ada" }
