crates/aven-check/tests/fixtures/check/invalid/comptime-partial-field-mismatch.av
User = { name: Text, email: Text }
partial = (object) => { keysOf(object) -> k; [k]?: object[k] }
x : partial(User) = { name: 5 }
